убрал картинку и добавил карусель

--- a/css/style_page2.css
+++ b/css/style_page2.css
@@ -200,7 +200,7 @@ html, body {
 .item a {
   display: block;
 }
-/*-------pravki 27.02.2018-------*/
+/*-------pravki 27.02.2018-----------------*/
 
 
 .item:hover {
@@ -260,7 +260,7 @@ html, body {
   padding: 7px;
 }
 
-/*-------pravki 27.02.2018-------*/
+/*--------------------pravki 27.02.2018-------*/
 .slider_margin {
   margin: 0 20%;
 }
