--- a/css/style_page2.css
+++ b/css/style_page2.css
@@ -527,18 +527,18 @@ html, body {
 
 .slide-container { display: block; }
 
-.slide {
-  top: 0;
-  opacity: 0;
-  width: 609px;
-  height: 420px;
-  display: block;
-  position: absolute;
+/*.slide {*/
+  /*top: 0;*/
+  /*opacity: 0;*/
+  /*width: 609px;*/
+  /*height: 420px;*/
+  /*display: block;*/
+  /*position: absolute;*/
 
-  transform: scale(0);
+  /*transform: scale(0);*/
 
-  transition: all .7s ease-in-out;
-}
+  /*transition: all .7s ease-in-out;*/
+/*}*/
 
 .slide img {
   width: 100%;
