--- a/css/style_page2.css
+++ b/css/style_page2.css
@@ -310,10 +310,10 @@ html, body {
   /*display: none;*/
 }
 .wrap_carousel {
-  /*display: none;*/
+  display: none;
 }
 .wrap_detect-text {
-  /*display: none;*/
+  display: none;
 }
 
 .redacting-btn{
